<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TransportationLily</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="starting_point">From: </string>
    <string name="starting_location">Enter starting point</string>
    <string name="destination_point">To: </string>
    <string name="ending_location">Enter your destination</string>
    <string name="senior_name"> Name: </string>
    <string name="typein_name"> Enter your full name here</string>
    <string name="contact_info"> Phone Number: </string>
    <string name="phone_number"> Enter your phone number here</string>
    <string name="button_askride"> View Schedule</string>
    <string name="button_offerride"> Offer ride</string>
    <string name="pick_time"> Pick time </string>
    <string name="pick_date"> Pick date </string>
    <string name="title_activity_ask_ride">AskRideActivity</string>
    <string name="title_activity_offer_ride">OfferRideActivity</string>
    

</resources>
